--- a/gb/22/12/24/n13891114.md
+++ b/gb/22/12/24/n13891114.md
@@ -1,76 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉市多所学校将“永续发展目标”融入校庆</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891115-592063-600x400.jpg" />
 <h6>兴嘉国小合照。（嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2022年12月24日讯】（大纪元记者李撷璎台湾嘉义报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%B8%82.md#1">嘉义市</a>今(24)日有多所学校同步举行<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A0%A1%E5%BA%86.md#1">校庆</a>，包含兴嘉国小举办30周年校庆、精忠国小也同样欢庆创校45周年。各校均安排丰富、多元的活动来庆祝，更将<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B8%E7%BB%AD%E5%8F%91%E5%B1%95.md#1">永续发展</a>目标(SDGs)融入<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A0%A1%E5%BA%86.md#1">校庆</a>活动之中。</p>
-<figure id="13891116" aria-describedby="caption-13891116" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891116-592064-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891116-592064-450x300.jpg" alt="市长与来宾一同为兴嘉国小切蛋糕庆祝。" width="500" /></a><figcaption id="caption-13891116" class="wp-caption-text">市长与来宾一同为兴嘉国小切蛋糕庆祝。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%B8%82.md#1">嘉义市</a>政府提供）</figcaption></figure>
-<p>分别以“兴嘉三十而立，迈向永续，Dream with me!”、精忠国小“我的生活，就是SDGs!”为主题，让年度盛事更具教育意义。嘉义市市长黄敏惠今日一早也特地到场，为各校送上祝福，同时表扬长期努力的资深优良教师、厨工等，并为各校志工颁赠服务贡献奖项。黄市长感谢校方、老师、家长及各界用心，让重视教育的嘉义市持续向前，链接全球并与国际接轨，将联合国“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B8%E7%BB%AD%E5%8F%91%E5%B1%95.md#1">永续发展</a>目标(SDGs)”实践在教育的各个面向。</p>
-<figure id="13891117" aria-describedby="caption-13891117" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891117-592065-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891117-592065-450x300.jpg" alt="市长为动态进场学生喝采。" width="500" /></a><figcaption id="caption-13891117" class="wp-caption-text">市长为动态进场学生喝采。（嘉义市政府提供）</figcaption></figure>
+<p>【大纪元2022年12月24日讯】（大纪元记者李撷璎台湾嘉义报导）嘉义市今(24)日有多所学校同步举行校庆，包含兴嘉国小举办30周年校庆、精忠国小也同样欢庆创校45周年。各校均安排丰富、多元的活动来庆祝，更将永续发展目标(SDGs)融入校庆活动之中。</p>
+<figure id="13891116" aria-describedby="caption-13891116" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891116-592064-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891116-592064-450x300.jpg" alt="市长与来宾一同为兴嘉国小切蛋糕庆祝。" width="500" /></a><figcaption id="caption-13891116" class="wp-caption-text">市长与来宾一同为兴嘉国小切蛋糕庆祝。（嘉义市政府提供）</figcaption></figure>
+<p>分别以“兴嘉三十而立，迈向永续，Dream with me!”、精忠国小“我的生活，就是SDGs!”为主题，让年度盛事更具教育意义。嘉义市市长黄敏惠今日一早也特地到场，为各校送上祝福，同时表扬长期努力的资深优良教师、厨工等，并为各校志工颁赠服务贡献奖项。黄市长感谢校方、老师、家长及各界用心，让重视教育的嘉义市持续向前，链接全球并与国际接轨，将联合国“永续发展目标(SDGs)”实践在教育的各个面向。</p>
+<figure id="13891117" aria-describedby="caption-13891117" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891117-592065-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891117-592065-450x300.jpg" alt="市长为动态进场学生喝采。" width="500" /></a><figcaption id="caption-13891117" class="wp-caption-text">市长为动态进场学生喝采。（嘉义市政府提供）</figcaption></figure>
 <p>黄敏惠市长一早前往兴嘉国小，为兴嘉国小“三十而立”的校庆献上祝福，并表示对兴嘉国小新旧共融的嘉许。兴嘉国小不仅爱物、惜物保存了旧时的课桌椅，在校园的另一边更可见与时俱进、与科技接轨的教具，从细节处就能感受到校方朝向教育纲领的四大愿景“人文第一、科技相佐、精致创新、国际视野”迈进的用心。</p>
-<figure id="13891120" aria-describedby="caption-13891120" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891120-592068-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891120-592068-450x300.jpg" alt="兴嘉国小动态进场。" width="500" /></a><figcaption id="caption-13891120" class="wp-caption-text">兴嘉国小动态进场。（嘉义市政府提供）</figcaption></figure>
+<figure id="13891120" aria-describedby="caption-13891120" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891120-592068-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891120-592068-450x300.jpg" alt="兴嘉国小动态进场。" width="500" /></a><figcaption id="caption-13891120" class="wp-caption-text">兴嘉国小动态进场。（嘉义市政府提供）</figcaption></figure>
 <p>黄市长更感动表示，她在孩子们充满创意、精神抖擞的动态进场中，看到孩子们对友善校园、永续环境的理解与体现，嘉义市的教育因为孩子们将课堂所学付诸实践而精彩，教育理念透过市府规划、校园落实以及家长的支持得以实现，孩子们更是当中表现最棒的主人翁。</p>
-<figure id="13891119" aria-describedby="caption-13891119" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891119-592067-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891119-592067-450x300.jpg" alt="兴嘉国小动态进场。" width="500" /></a><figcaption id="caption-13891119" class="wp-caption-text">兴嘉国小动态进场。（嘉义市政府提供）</figcaption></figure>
+<figure id="13891119" aria-describedby="caption-13891119" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891119-592067-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891119-592067-450x300.jpg" alt="兴嘉国小动态进场。" width="500" /></a><figcaption id="caption-13891119" class="wp-caption-text">兴嘉国小动态进场。（嘉义市政府提供）</figcaption></figure>
 <p>兴嘉国小校庆开场吸睛，安排各班孩子们融入联合国永续发展目标(SDGs)，踏着活力的步伐创意进场。有学生以彩带象征“水”，以动作变换展现水的意象，也有班级手戴“金色手套”比拟成阳光并带来热情舞蹈，展现绿能与生活的连结。从音乐、造型、舞蹈可看出师生共同的努力和准备，小一新生的超“萌”火炬舞更是搏得所有来宾惊呼连连，黄市长更忍不住比出姆指直呼“可爱到让人融化”。校园摊位中更融入生活安全闯关，包含防灾防震、环境教育、户外教育、性平教育、食农教育、童军教育、水保教育等多项议题，学生在游戏中学习，珍爱自己所在的家园，进而培养一同迈向永续、迎接未来的素养。</p>
-<figure id="13891118" aria-describedby="caption-13891118" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891118-592066-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891118-592066-450x300.jpg" alt="兴嘉国小动态进场。" width="500" /></a><figcaption id="caption-13891118" class="wp-caption-text">兴嘉国小动态进场。（嘉义市政府提供）</figcaption></figure>
+<figure id="13891118" aria-describedby="caption-13891118" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891118-592066-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891118-592066-450x300.jpg" alt="兴嘉国小动态进场。" width="500" /></a><figcaption id="caption-13891118" class="wp-caption-text">兴嘉国小动态进场。（嘉义市政府提供）</figcaption></figure>
 <p>兴嘉国小的校庆活动中也安排切蛋糕环节，庆祝兴嘉“三十而立”，全校师生与来宾一同为校庆大喊“生日快乐”，场面热闹温馨。</p>
 <p>随后黄敏惠市长前往精忠国小，与全校师生一同欢庆精忠国小45周年校庆-“我的生活，就是SDGs!”，黄市长大赞精忠国小和嘉义市这座城市一样小而美丽，汇集着“人文之美、精致之美、善良之美和环境之美”。日前于精忠国小举行“嘉义市实践联合国永续发展目标(SDGs)行动教育指引”发布记者会时，精忠国小展现了作为领头羊学校，带领各校在课程中结合SDGs、放眼永续的前瞻目光，学生们的热情与有礼更是让她印象深刻。</p>
-<figure id="13891122" aria-describedby="caption-13891122" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891122-592070-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891122-592070-450x300.jpg" alt="在精忠国小市长颁奖。" width="500" /></a><figcaption id="caption-13891122" class="wp-caption-text">在精忠国小市长颁奖。（嘉义市政府提供）</figcaption></figure>
+<figure id="13891122" aria-describedby="caption-13891122" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891122-592070-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891122-592070-450x300.jpg" alt="在精忠国小市长颁奖。" width="500" /></a><figcaption id="caption-13891122" class="wp-caption-text">在精忠国小市长颁奖。（嘉义市政府提供）</figcaption></figure>
 <p>黄市长特别祝福精忠国小这间小而有特色的学校如同嘉义市一样“小城市有大创新”，小而美的学校能在全校师生及家长的支持下不断发掘自身特色，迈向更长远的未来。</p>
-<figure id="13891121" aria-describedby="caption-13891121" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891121-592069-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891121-592069-450x300.jpg" alt="在精忠国小市长颁奖。" width="500" /></a><figcaption id="caption-13891121" class="wp-caption-text">在精忠国小市长颁奖。（嘉义市政府提供）</figcaption></figure>
+<figure id="13891121" aria-describedby="caption-13891121" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891121-592069-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891121-592069-450x300.jpg" alt="在精忠国小市长颁奖。" width="500" /></a><figcaption id="caption-13891121" class="wp-caption-text">在精忠国小市长颁奖。（嘉义市政府提供）</figcaption></figure>
 <p>精忠国小总体课程持续以实践联合国永续发展目标SDGs为教学目标，也以此议题和国外交流学校进行讨论和分享，除了实际在学校力行减塑及资源回收工作之外，也在课程中认知海洋塑胶微粒对海洋生物的危害，今年也实际到布袋及东石的海边进行净滩。</p>
-<figure id="13891123" aria-describedby="caption-13891123" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891123-592071-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13891123-592071-450x300.jpg" alt="精忠国小大合照。" width="500" /></a><figcaption id="caption-13891123" class="wp-caption-text">精忠国小大合照。（嘉义市政府提供）</figcaption></figure>
+<figure id="13891123" aria-describedby="caption-13891123" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13891123-592071-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13891123-592071-450x300.jpg" alt="精忠国小大合照。" width="500" /></a><figcaption id="caption-13891123" class="wp-caption-text">精忠国小大合照。（嘉义市政府提供）</figcaption></figure>
 <p>今日校庆结合课程博览会，更以国际交流和VR/AR新科技为主题，展现精忠国小致力于国际和科技教育的努力。由幼儿园带来的“因为有你而幸福”节庆舞蹈、非洲鼓舞的“WASA精忠”鼓曲、独轮车的“大象漫步地球”演出，以及各年级的圣诞节庆进场表演也为年度盛会增添欢快气氛。</p>
 <p>责任编辑：李薇</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/2/10/26/n239299.md#1">陈总统期勉学子走出象牙塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/3/26/n2059912.md#1">再耕园庇护工场产品义卖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/26/n13459682.md#1">嘉市精忠国小44周年校庆游艺会暨课程博览会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/2/n13877343.md#1">嘉市北兴国中喜迎甲子校庆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/16/n13886068.md#1">精忠国小校庆SDG15路跑健走 捡垃圾服务社区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/21/n13889033.md#1">兴敬自然清净桧河 嘉市北兴国中行动护河川</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971184.md#1">嘉义分署112年4月份联合拍卖 法拍成果丰硕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971141.md#1">嘉市112学年度国小新生登记报到 送独嘉好礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971102.md#1">店老板勇于踏上改造的第一步 21日截止受理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13970633.md#1">“斗南国小日式宿舍-斗南文荟馆”开幕启用</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/2/10/26/n239299.md#1">陈总统期勉学子走出象牙塔</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/3/26/n2059912.md#1">再耕园庇护工场产品义卖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/26/n13459682.md#1">嘉市精忠国小44周年校庆游艺会暨课程博览会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/2/n13877343.md#1">嘉市北兴国中喜迎甲子校庆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/16/n13886068.md#1">精忠国小校庆SDG15路跑健走 捡垃圾服务社区</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/21/n13889033.md#1">兴敬自然清净桧河 嘉市北兴国中行动护河川</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380584.md#1">剑湖山跨年烟火秀 400架无人机与千米环绕式花火 打造欢乐“888秒”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380022.md#1">土库好COOL商圈荣获“全国卓越商圈奖-最佳发展潜力奖”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379997.md#1">守护长者代步车安全 周春米赠千件反光背心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14380000.md#1">救护车心电图判读跨院合作 成功抢救屏58患者</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/25/n11070799.md#1" target="_blank">林辉：因如此荒诞理由 他们成为了“右派”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969803.md#1">瑞典女子因车祸濒死 见到未来的丈夫与孩子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967518.md#1">千古名篇《长恨歌》经典诗句知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/8/n13968218.md#1">【未解之谜】难以磨灭的爱恋 隔世再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965036.md#1">圣女贞德 被嘲笑的神迹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963125.md#1">父亲托梦，援助大萧条时的委托人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971252.md#1">【晚间新闻】传天安门红墙现“反共标语”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970800.md#1">【未解之谜】7万大军压境 只为抢一僧人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971492.md#1">【秦鹏观察】巴菲特投资日商社 中国通缩到来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970630.md#1">一文看懂 美国泄密文件哪些内容和中共有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970109.md#1">沙尘暴再袭 吹至长江边 影响中国18省市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970213.md#1">大陆家电上市公司出现亏损 1.6万人离职</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13970011.md#1">功夫明星陈惠敏拄拐杖现身 健康状况引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13969145.md#1">曾获封港版理查?基尔 方中信暴瘦到快认不出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970684.md#1">称分不清迪丽热巴和古力娜扎 冯小刚遭网民炮轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969978.md#1">资深港星吴耀汉病逝 享寿83岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970772.md#1">39岁钟嘉欣庆生 获4岁儿送“最佳妈妈”奖杯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963816.md#1">每天1根香蕉抗癌防心脏病 但2类人不适合</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969585.md#1">中空只剩树皮还泡咸水 华府樱花树年年开花</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968938.md#1">甜菜有10大好处 瘦身降压让大脑更年轻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970048.md#1">肾衰如何逆转？名中医教你免洗肾要诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970299.md#1">外表像女儿 英主持人谈冻龄秘诀：洗冷水澡</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/24/n13891114.htm">嘉市多所学校将“永续发展目标”融入校庆</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891114.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/30/n13684535.md#1">【传统音乐】传统文化与音乐 第四集</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390711.md#1">【未解之谜】蕴含地外元素可自主移动？贝茨球之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390848.md#1">【车评】微形全混能 2025 Lexus UX 300h F Sport Handling</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390744.md#1">【军事情报局】血战库尔斯克 俄军损失90战车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390598.md#1">国税局：老人不合规从退休计划中提款将受罚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390414.md#1">袁红冰：中共军队两军官对抗调查 多人遭枪杀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390342.md#1">北京全面推个人养老金  专家：又一次盘剥</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389389.md#1">高圆圆素颜带娃外出骑车 一细节获赞温馨有爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389328.md#1">孙俪自曝13岁儿子用身体帮她挡车 网友大赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390069.md#1">贾静雯素颜冻龄惊艳 海关人员查看护照惊呆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390043.md#1">开跑车随手丢烟头 《庆余年》主演张若昀惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390760.md#1">睽违9年再接古装剧 胡歌有望饰演镖客一角?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389057.md#1">用荷兰锅煮饭 停电也不担心 一锅到底营养更全面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390642.md#1">用手机拍微距—摄影家廖翠环的创作之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389513.md#1">开卷真的有益 擅长阅读者大脑结构不同</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389408.md#1">为什么不该用微波炉泡茶？ 泡好茶三技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390257.md#1">在冬天真的比较容易罹患感冒吗？ 专家释疑</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/24/n13891114.htm">嘉市多所学校将“永续发展目标”融入校庆</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/24/n13891114.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
